--- a/SolucaoCapitulo01/SolucaoCapitulo01/Views/Departamento/Create.cshtml
+++ b/SolucaoCapitulo01/SolucaoCapitulo01/Views/Departamento/Create.cshtml
@@ -1,22 +1,15 @@
 ﻿@model Capitulo01.Models.Departamento
 
 @{
-    Layout = null;
+    Layout = "_LayoutIES";
 }
 
-<!DOCTYPE html>
+<div>
+    <div class="card-header text-white bg-danger text-center h1">
+        Registrando um novo Departamento
+    </div>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Create</title>
-</head>
-<body>
-
-<h4>Departamento</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
+    <div class="card-body">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
@@ -24,19 +17,28 @@
                 <input asp-for="Nome" class="form-control" />
                 <span asp-validation-for="Nome" class="text-danger"></span>
             </div>
+
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <label asp-for="InstituicaoID" class="control-label"></label>
+                <select asp-for="InstituicaoID" class="form-control" 
+                        asp-items="@(new SelectList(
+                            @ViewBag.Instituicoes, "InstituicaoID", "Nome"))"></select>
+            </div>
+
+            <div class="form-group text-center h3">
+                <input type="submit" value="Registrar Departamento" class="btn btn-light" />
+                <a asp-action="Index" class="btn btn-info">
+                    Retornar a listagem de departamentos
+                </a>
             </div>
         </form>
     </div>
+
+    <div class="card-footer bg-dark text-center text-white">
+        Informe os dados acima e/ou clique em um dos botões de ação
+    </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
-
-@section Scripts {
+@section ScriptPage {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
-</body>
-</html>
