--- a/SolucaoCapitulo01/SolucaoCapitulo01/Views/Departamento/Details.cshtml
+++ b/SolucaoCapitulo01/SolucaoCapitulo01/Views/Departamento/Details.cshtml
@@ -1,23 +1,25 @@
 ﻿@model Capitulo01.Models.Departamento
 
 @{
-    Layout = "_LayoutIES";
+    ViewData["Title"] = "Details";
+    Layout = "~/Views/Shared/_LayoutIES.cshtml";
 }
 
-@section styles {
+@section styles{ 
     <link rel="stylesheet" href="~/lib/font-awesome/css/fontawesome-all.min.css" />
 }
 
 <div class="card-block">
     <div class="card-header text-white bg-secondary text-center h1">
-        Exibindo um departamento para remoção
+        Exibindo um Departamento existente
     </div>
-
+        
     <div class="card-body">
+
         <div class="form-group">
+            @*@Html.DisplayNameFor(model => model.Nome)*@
             <label asp-for="DepartamentoID" class="control-label"></label>
             <br />
-
             <div class="input-group">
                 <span class="input-group-addon">
                     <i class="fa fa-key" aria-hidden="true"></i>
@@ -27,8 +29,8 @@
 
             <label asp-for="Nome" class="control-label"></label>
             <br />
-
             <div class="input-group">
+                @*@Html.DisplayFor(model => model.Nome)*@
                 <span class="input-group-addon">
                     <i class="fa fa-user-circle" aria-hidden="true"></i>
                 </span>
@@ -37,48 +39,22 @@
 
             <label asp-for="Instituicao.Nome" class="control-label"></label>
             <br />
-
             <div class="input-group">
+                @*@Html.DisplayNameFor(model => model.Instituicao)*@
                 <span class="input-group-addon">
                     <i class="fa fa-user-circle" aria-hidden="true"></i>
                 </span>
                 <input asp-for="Instituicao.Nome" class="form-control" disabled="disabled" />
             </div>
         </div>
+
     </div>
 
     <div class="card-footer bg-info text-center text-white">
-        <a asp-action="Index" class="btn btn-danger">
+        <a asp-action="Edit" asp-route-id="@Model.DepartamentoID" class="btn btn-warning">
+            Alterar</a> |
+        <a asp-action="Index" class="btn btn-warning">
             Retornar a listagem de departamentos
         </a>
-        <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#modalConfirmationDelete">
-            Remover Departamento
-        </button>
-    </div>
-</div>
-    
-<div class="modal fade" id="modalConfirmationDelete" tabindex="-1" role="dialog"
-     aria-labelledby="deleteModal" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="deleteModal">Remoção de departamento</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <p>Confirma a exclusão do departamento @Model.Nome.ToUpper() ?</p>
-            </div>
-            <div class="modal-footer">
-                <form asp-action="Delete">
-                    <input type="hidden" asp-for="DepartamentoID" />
-                    <input type="submit" value="Remover Departamento" class="btn btn-primary" /> |
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">
-                        Fechar
-                    </button>
-                </form>
-            </div>
-        </div>
     </div>
 </div>
