--- a/SolucaoCapitulo01/SolucaoCapitulo01/Views/Instituicao/Details.cshtml
+++ b/SolucaoCapitulo01/SolucaoCapitulo01/Views/Instituicao/Details.cshtml
@@ -14,31 +14,39 @@
     </div>
 
     <div class="card-body">
-        <div class="form-group">
-            <label asp-for="InstituicaoID" class="control-label"></label>
-            <br />
-            <div class="input-group">
-                <span class="input-group-addon">
-                    <i class="fa fa-key" aria-hidden="true"></i>
-                </span>
-                <input asp-for="InstituicaoID" class="form-control" disabled="disabled" />
-            </div>
-            <label asp-for="Nome" class="control-label"></label>
-            <br />
-            <div class="input-group">
-                <span class="input-group-addon">
-                    <i class="fa fa-user-circle" aria-hidden="true"></i>
-                </span>
-                <input asp-for="Nome" class="form-control" disabled="disabled" />
+        <div class="row">
+            <div class="col-xs-7">
+                <div class="form-group">
+                    <label asp-for="InstituicaoID" class="control-label"></label>
+                    <br />
+                    <div class="input-group">
+                        <span class="input-group-addon">
+                            <i class="fa fa-key" aria-hidden="true"></i>
+                        </span>
+                        <input asp-for="InstituicaoID" class="form-control" disabled="disabled" />
+                    </div>
+                    <label asp-for="Nome" class="control-label"></label>
+                    <br />
+                    <div class="input-group">
+                        <span class="input-group-addon">
+                            <i class="fa fa-user-circle" aria-hidden="true"></i>
+                        </span>
+                        <input asp-for="Nome" class="form-control" disabled="disabled" />
+                    </div>
+
+                    <label asp-for="Endereco" class="control-label"></label>
+                    <br />
+                    <div class="input-group">
+                        <span class="input-group-addon">
+                            <i class="fa fa-address-card" aria-hidden="true"></i>
+                        </span>
+                        <input asp-for="Endereco" class="form-control" disabled="disabled" />
+                    </div>
+                </div>
             </div>
 
-            <label asp-for="Endereco" class="control-label"></label>
-            <br />
-            <div class="input-group">
-                <span class="input-group-addon">
-                    <i class="fa fa-address-card" aria-hidden="true"></i>
-                </span>
-                <input asp-for="Endereco" class="form-control" disabled="disabled" />
+            <div class="col-xs-5">
+                @Html.Partial("~/Views/Instituicao/_ComDepartamentos.cshtml", Model.Departamentos.ToList())
             </div>
         </div>
     </div>
