--- a/SolucaoCapitulo01/SolucaoCapitulo01/Views/Home/Index.cshtml
+++ b/SolucaoCapitulo01/SolucaoCapitulo01/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Capitulo01.Models.Instituicao>
+﻿@model IEnumerable<Modelo.Cadastros.Instituicao>
 
 @{
     ViewData["Title"] = "Casa do Código - ASP.NET Core MVC";
