--- a/SolucaoCapitulo01/SolucaoCapitulo01/Views/Instituicao/Create.cshtml
+++ b/SolucaoCapitulo01/SolucaoCapitulo01/Views/Instituicao/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Capitulo01.Models.Instituicao
+﻿@model Modelo.Cadastros.Instituicao
 
 @{
     Layout = "_LayoutIES";
@@ -8,10 +8,10 @@
     <div class="card-header text-white bg-danger text-center h1">Registrando uma nova Instituicao</div>
 
     <div class="card-body">
-        
+
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            
+
             <div class="form-group">
                 <label asp-for="Nome" class="control-label"></label>
                 <input asp-for="Nome" class="form-control" />
@@ -27,7 +27,7 @@
                 <a asp-action="Index" class="btn btn-info">Retornar a listagem de instituições</a>
             </div>
         </form>
-        
+
     </div>
 
     <div class="card-footer bg-dark text-center text-white">
