--- a/SolucaoCapitulo01/SolucaoCapitulo01/Views/Instituicao/Edit.cshtml
+++ b/SolucaoCapitulo01/SolucaoCapitulo01/Views/Instituicao/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model Capitulo01.Models.Instituicao
+﻿@model Modelo.Cadastros.Instituicao
 
 @{
     Layout = "_LayoutIES";
@@ -10,29 +10,29 @@
     <div class="card-body">
 
         <div class="row">
-            
-                <form asp-action="Edit">
-                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                    
-                    <input type="hidden" asp-for="InstituicaoID" />
 
-                    <div class="form-group">
-                        <label asp-for="Nome" class="control-label"></label>
-                        <input asp-for="Nome" class="form-control" />
-                        <span asp-validation-for="Nome" class="text-danger"></span>
-                    </div>
-                    <div class="form-group">
-                        <label asp-for="Endereco" class="control-label"></label>
-                        <input asp-for="Endereco" class="form-control" />
-                        <span asp-validation-for="Endereco" class="text-danger"></span>
-                    </div>
+            <form asp-action="Edit">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
-                    <div class="form-group text-center h3">
-                        <input type="submit" value="Atualizar Instituição" class="btn btn-primary" />
-                        <a asp-action="Index" class="btn btn-warning">Retornar a listagem de Instituições</a>
-                    </div>
-                </form>
-            
+                <input type="hidden" asp-for="InstituicaoID" />
+
+                <div class="form-group">
+                    <label asp-for="Nome" class="control-label"></label>
+                    <input asp-for="Nome" class="form-control" />
+                    <span asp-validation-for="Nome" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Endereco" class="control-label"></label>
+                    <input asp-for="Endereco" class="form-control" />
+                    <span asp-validation-for="Endereco" class="text-danger"></span>
+                </div>
+
+                <div class="form-group text-center h3">
+                    <input type="submit" value="Atualizar Instituição" class="btn btn-primary" />
+                    <a asp-action="Index" class="btn btn-warning">Retornar a listagem de Instituições</a>
+                </div>
+            </form>
+
         </div>
 
         <div class="card-footer bg-info text-center text-white">
@@ -42,6 +42,6 @@
     </div>
 </div>
 
-        @section ScriptPage {
-            @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-        }
+@section ScriptPage {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
