--- a/SolucaoCapitulo01/SolucaoCapitulo01/Views/Instituicao/Index.cshtml
+++ b/SolucaoCapitulo01/SolucaoCapitulo01/Views/Instituicao/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Capitulo01.Models.Instituicao>
+﻿@model IEnumerable<Modelo.Cadastros.Instituicao>
 
 @{
     Layout = "_LayoutIES"; // "~/Views/Shared/_LayoutIES.cshtml";
