--- a/SolucaoCapitulo01/SolucaoCapitulo01/Views/Shared/_LayoutIES.cshtml
+++ b/SolucaoCapitulo01/SolucaoCapitulo01/Views/Shared/_LayoutIES.cshtml
@@ -45,6 +45,10 @@
                         <img src="http://cdn.grid.fotosearch.com/CSP/CSP117/k19258563.jpg" width="30" height="30" alt="" />
                         Departamentos
                     </a>
+                    <a class="nav-item nav-link" asp-controller="Academico" asp-action="Index">
+                        <img src="" width="30" height="30" alt="" />
+                        Acadêmicos
+                    </a>
                 </nav>
             </div>
 
