--- a/SolucaoCapitulo01/SolucaoCapitulo01/Views/Shared/_LayoutIES.cshtml
+++ b/SolucaoCapitulo01/SolucaoCapitulo01/Views/Shared/_LayoutIES.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿@inject Microsoft.AspNetCore.Identity.SignInManager<SolucaoCapitulo01.Models.Infra.UsuarioDaAplicacao> SignInManager
+@inject Microsoft.AspNetCore.Identity.UserManager<SolucaoCapitulo01.Models.Infra.UsuarioDaAplicacao> UserManager
+<!DOCTYPE html>
 
 <html>
 <head>
@@ -19,9 +21,10 @@
     @RenderSection("Styles", required: false)
 </head>
 <body>
+
     <nav class="navbar navbar-fixed-top navbar-light bg-primary">
         <a class="navbar-brand" href="#">
-            <img src="" width="30" height="30" alt="" />
+            <img src="" width="30" height="30" alt="" /><br />
             ASP.NET Core MVC
         </a>
     </nav>
@@ -34,18 +37,38 @@
             <div class="col-xs-12">&nbsp;</div>
         </div>
 
+
+        <div class="row" style="text-align:right;">
+            <div class="col-md-6"></div>
+            <div class="col-md-6">
+                @if (SignInManager.IsSignedIn(User))
+            {
+                <div>
+                    Olá @UserManager.GetUserName(User), seja bem-vindo(a) /
+                    @Html.ActionLink("Log Out", "Sair", "Infra", new { area = "" })
+                </div>
+        }
+        else
+        {
+            <a class="nav-item nav-link" asp-area="" asp-controller="Infra" asp-action="Acessar">
+                Informar usuario/senha para acessar
+            </a>
+    }
+            </div>
+        </div>
+
         <div class="row">
             <div class="col-xs-2">
                 <nav class="nav flex-column bg-transparent">
-                    <a class="navbar-link active" href="~/Instituicao/">
+                    <a class="navbar-link active" asp-area="Cadastros" asp-controller="Instituicao">
                         <img src="http://www.featurepics.com/FI/Thumb/20090415/Golden-Greek-Letter-Iota-1152962.jpg" width="30" height="30" alt="" />
                         Instituições
                     </a><br />
-                    <a class="navbar-link" href="~/Departamento">
+                    <a class="navbar-link" asp-area="Cadastros" asp-controller="Departamento">
                         <img src="http://cdn.grid.fotosearch.com/CSP/CSP117/k19258563.jpg" width="30" height="30" alt="" />
                         Departamentos
                     </a>
-                    <a class="nav-item nav-link" asp-controller="Academico" asp-action="Index">
+                    <a class="nav-item nav-link" asp-area="Discente" asp-controller="Academico" asp-action="Index">
                         <img src="" width="30" height="30" alt="" />
                         Acadêmicos
                     </a>
